# halo2_demo

./: Cargo.toml  README.md  bacon.toml  makefile
src/: lib.rs  main.rs
src/chips/: hash.rs  merkle.rs  mod.rs  tranado.rs
src/circuits/: hash.rs  merkle.rs
src/examples/: custum_gate.rs  fibonacci.rs  mod.rs  range_lookup.rs  range_lookup3.rs  range_lookup_2.rs  simple_chip.rs  table.rs  table2.rs
two-chips/: .gitignore  Cargo.toml  start.sh
two-chips/src/: chip.rs  lib.rs  main.rs
