[package]
name = "simple-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]


[dependencies]
halo2_proofs = { version = "0.3.0" }
backtrace = { version = "0.3", optional = true }
ff = "0.13"
group = "0.13"
pasta_curves = "0.5"
rand_core = { version = "0.6", default-features = false }
tracing = "0.1"
blake2b_simd = "1"
maybe-rayon = { version = "0.1.0", default-features = false }

# Developer tooling dependencies
plotters = { version = "0.3.0", optional = true }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }

# Legacy circuit compatibility
halo2_legacy_pdqsort = { version = "0.1.0", optional = true }

[dev-dependencies]
assert_matches = "1.5"
criterion = "0.5.1"
gumdrop = "0.8"
proptest = "1"
rand_core = { version = "0.6", default-features = false, features = [
  "getrandom",
] }

# Indirect dev-dependencies that we pin to preserve MSRV in CI checks.
dashmap = ">=5, <5.5.0"   # dashmap 5.5.0 has MSRV 1.64
image = ">=0.24, <0.24.5" # image 0.24.5 has MSRV 1.61
tempfile = ">=3, <3.7.0"  # tempfile 3.7.0 has MSRV 1.63

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dev-dependencies]
getrandom = { version = "0.2", features = ["js"] }

[features]
dev-graph = [
  "halo2_proofs/dev-graph",
  "plotters",
  "plotters/bitmap_backend",
  "plotters/bitmap_encoder",
]
