[package]
name = "two-chips"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { version = "0.3.0", features=["dev-graph"] }
backtrace = { version = "0.3", optional = true }
ff = "0.13"
group = "0.13"
pasta_curves = "0.5"
rand_core = { version = "0.6", default-features = false, features= ["getrandom"] }
tracing = "0.1"
blake2b_simd = "1"
maybe-rayon = {version = "0.1.0", default-features = false}

# Developer tooling dependencies
plotters = "0.3.3"
tabbycat = { version = "0.1", features = ["attributes"], optional = true }

# Legacy circuit compatibility
halo2_legacy_pdqsort = { version = "0.1.0", optional = true }

[dev-dependencies]
assert_matches = "1.5"
criterion = "0.5.1"
gumdrop = "0.8"
proptest = "1"
